--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
             
         </head>
         <body>
-            
+            <h1>New Test Website</h1>
+            <p>Hello World</p>
         </body>
     </html>
