--- a/home.html
+++ b/home.html
@@ -6,5 +6,10 @@
         <body>
             <h1>New Test Website</h1>
             <p>Hello World</p>
+            <ol>
+                <li>This is step 1</li>
+                <li>This is step 2</li>
+                <li>this is step 3</li>
+            </ol>
         </body>
     </html>
